Add french localization.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,26 @@
+# Babel configuration
+
+[compile_catalog]
+domain = biryani
+directory = biryani/i18n
+statistics = true
+
+[extract_messages]
+add_comments = TRANSLATORS:
+output_file = biryani/i18n/biryani.pot
+width = 80
+
+[init_catalog]
+domain = biryani
+input_file = biryani/i18n/biryani.pot
+output_dir = biryani/i18n
+
+[update_catalog]
+domain = biryani
+input_file = biryani/i18n/biryani.pot
+output_dir = biryani/i18n
+previous = true
+
 # Sphinx-PyPI-upload configuration
 
 [build_sphinx]
