Improve metadata in internationalization files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
+copyright_holder = Easter-eggs
+msgid-bugs-address = eraviart@easter-eggs.com
 output_file = biryani/i18n/biryani.pot
 width = 80
 
