--- a/.tx/config
+++ b/.tx/config
@@ -1,4 +1,4 @@
-[biryani.biryanipot]
+[biryani.biryani]
 file_filter = biryani/i18n/<lang>/LC_MESSAGES/biryani.po
 source_file = biryani/i18n/biryani.pot
 source_lang = en
