Rename Biryani to Biryani1. :func:`biryani1.customconv` now accepts modules instead of modules names.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,26 +1,26 @@
 # Babel configuration
 
 [compile_catalog]
-domain = biryani
-directory = biryani/i18n
+domain = biryani1
+directory = biryani1/i18n
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
 copyright_holder = Easter-eggs
 msgid-bugs-address = eraviart@easter-eggs.com
-output_file = biryani/i18n/biryani.pot
+output_file = biryani1/i18n/biryani1.pot
 width = 80
 
 [init_catalog]
-domain = biryani
-input_file = biryani/i18n/biryani.pot
-output_dir = biryani/i18n
+domain = biryani1
+input_file = biryani1/i18n/biryani1.pot
+output_dir = biryani1/i18n
 
 [update_catalog]
-domain = biryani
-input_file = biryani/i18n/biryani.pot
-output_dir = biryani/i18n
+domain = biryani1
+input_file = biryani1/i18n/biryani1.pot
+output_dir = biryani1/i18n
 previous = true
 
 # Sphinx-PyPI-upload configuration
