--- a/.tx/config
+++ b/.tx/config
@@ -1,7 +1,8 @@
-[biryani.biryani]
-file_filter = biryani/i18n/<lang>/LC_MESSAGES/biryani.po
-source_file = biryani/i18n/biryani.pot
+[biryani.biryani1]
+file_filter = biryani1/i18n/<lang>/LC_MESSAGES/biryani1.po
+source_file = biryani1/i18n/biryani1.pot
 source_lang = en
+type = PO
 
 [main]
 host = https://www.transifex.net
