--- a/.tx/config
+++ b/.tx/config
@@ -1,9 +1,8 @@
+[main]
+host = https://www.transifex.com
+
 [biryani.biryani1]
 file_filter = biryani1/i18n/<lang>/LC_MESSAGES/biryani1.po
 source_file = biryani1/i18n/biryani1.pot
 source_lang = en
 type = PO
-
-[main]
-host = https://www.transifex.net
-
