--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ input_file = biryani/i18n/biryani.pot
 output_dir = biryani/i18n
 previous = true
 
+
 # Sphinx-PyPI-upload configuration
 
 [build_sphinx]
@@ -32,3 +33,12 @@ all_files  = 1
 
 [upload_sphinx]
 upload-dir = docs/build/html
+
+
+# Flake8
+
+[flake8]
+; E251 unexpected spaces around keyword / parameter equals
+ignore = E251
+;max-complexity = 10
+max-line-length = 120
