--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,6 @@ input_file = biryani/i18n/biryani.pot
 output_dir = biryani/i18n
 previous = true
 
-
 # Sphinx-PyPI-upload configuration
 
 [build_sphinx]
@@ -34,11 +33,22 @@ all_files  = 1
 [upload_sphinx]
 upload-dir = docs/build/html
 
-
-# Flake8
+# Other
 
 [flake8]
 ; E251 unexpected spaces around keyword / parameter equals
 ignore = E251
 ;max-complexity = 10
 max-line-length = 120
+
+[tool:pytest]
+addopts = --doctest-modules --disable-pytest-warnings
+
+[tox:tox]
+envlist = py27,py37
+
+[testenv]
+whitelist_externals = make
+commands =
+  make install
+  make test
